proper fix to disable dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: light) {
+@media () {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
